<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TopicSelectionFragment">


    <ImageView
        android:id="@+id/imQuest"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imQuest">

        <Button
            android:id="@+id/buttonSea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/sea" />

        <Button
            android:id="@+id/buttonSun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/sun" />

        <Button
            android:id="@+id/buttonNature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/nature" />

        <Button
            android:id="@+id/buttonAnimals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/animals" />

        <Button
            android:id="@+id/buttonBalloon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/balloon" />

        <Button
            android:id="@+id/buttonCats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#0D47A1"
            android:text="@string/cats" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose a wallpaper theme"
        android:textColor="#0D47A1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imQuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>